--- a/_modules/index.html
+++ b/_modules/index.html
@@ -7,7 +7,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Overview: module code &#8212; barotropy v0.2.6 documentation</title>
+    <title>Overview: module code &#8212; barotropy v0.2.7 documentation</title>
   
   
   
@@ -37,7 +37,7 @@
 <link rel="preload" as="script" href="../_static/scripts/pydata-sphinx-theme.js?digest=dfe6caa3a7d634c4db9b" />
   <script src="../_static/vendor/fontawesome/6.5.2/js/all.min.js?digest=dfe6caa3a7d634c4db9b"></script>
 
-    <script src="../_static/documentation_options.js?v=24836a1f"></script>
+    <script src="../_static/documentation_options.js?v=9f7fe802"></script>
     <script src="../_static/doctools.js?v=9a2dae69"></script>
     <script src="../_static/sphinx_highlight.js?v=dc90522c"></script>
     <script>let toggleHintShow = 'Click to show';</script>
@@ -140,7 +140,7 @@
   
   
   
-    <p class="title logo__title">barotropy v0.2.6 documentation</p>
+    <p class="title logo__title">barotropy v0.2.7 documentation</p>
   
 </a></div>
         <div class="sidebar-primary-item">
@@ -285,8 +285,12 @@ document.write(`
                 <article class="bd-article">
                   
   <h1>All modules for which code is available</h1>
-<ul><li><a href="barotropy/fluent_automation/fluent_automation.html">barotropy.fluent_automation.fluent_automation</a></li>
+<ul><li><a href="barotropy/barotropic_model.html">barotropy.barotropic_model</a></li>
+<li><a href="barotropy/fluent_automation/fluent_automation.html">barotropy.fluent_automation.fluent_automation</a></li>
 <li><a href="barotropy/fluent_automation/fluent_plot_nozzle_data.html">barotropy.fluent_automation.fluent_plot_nozzle_data</a></li>
+<li><a href="barotropy/fluent_automation/nozzle_meshing.html">barotropy.fluent_automation.nozzle_meshing</a></li>
+<li><a href="barotropy/graphics.html">barotropy.graphics</a></li>
+<li><a href="barotropy/math.html">barotropy.math</a></li>
 <li><a href="barotropy/utilities.html">barotropy.utilities</a></li>
 </ul>
 
