--- a/genindex.html
+++ b/genindex.html
@@ -7,7 +7,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; barotropy v0.4.0 documentation</title>
+    <title>Index &#8212; barotropy v0.4.2 documentation</title>
   
   
   
@@ -37,7 +37,7 @@
 <link rel="preload" as="script" href="_static/scripts/pydata-sphinx-theme.js?digest=dfe6caa3a7d634c4db9b" />
   <script src="_static/vendor/fontawesome/6.5.2/js/all.min.js?digest=dfe6caa3a7d634c4db9b"></script>
 
-    <script src="_static/documentation_options.js?v=6d25dc78"></script>
+    <script src="_static/documentation_options.js?v=c1adde03"></script>
     <script src="_static/doctools.js?v=9a2dae69"></script>
     <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <script>let toggleHintShow = 'Click to show';</script>
@@ -140,7 +140,7 @@
   
   
   
-    <p class="title logo__title">barotropy v0.4.0 documentation</p>
+    <p class="title logo__title">barotropy v0.4.2 documentation</p>
   
 </a></div>
         <div class="sidebar-primary-item">
@@ -493,14 +493,16 @@ document.write(`
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/api/barotropy.fluent_automation.nozzle_meshing.html#barotropy.fluent_automation.nozzle_meshing.find_optimal_inflation_layer">find_optimal_inflation_layer() (in module barotropy.fluent_automation.nozzle_meshing)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/api/barotropy.barotropic_model.html#barotropy.barotropic_model.BarotropicModel.fit_polynomials">fit_polynomials() (barotropy.barotropic_model.BarotropicModel method)</a>
 
       <ul>
         <li><a href="source/api/barotropy.barotropic_model.html#barotropy.barotropic_model.PolynomialFitter.fit_polynomials">(barotropy.barotropic_model.PolynomialFitter method)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/api/barotropy.utilities.html#barotropy.utilities.flatten_state_dict">flatten_state_dict() (in module barotropy.utilities)</a>
+</li>
   </ul></td>
 </tr></table>
 
